--- a/mobile/src/main/res/xml/pref_general.xml
+++ b/mobile/src/main/res/xml/pref_general.xml
@@ -16,7 +16,7 @@
  -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine"
+    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.mobile"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
